--- a/A.html
+++ b/A.html
@@ -1,4 +1,6 @@
-<head/>
+<!DOCTYPE html>
+<html lang="en">
+<head></head>
 <body>
-Everybody loves anime and hentai.
+  <p>Everybody loves anime and hentai.</p>
 </body>
