--- a/A.html
+++ b/A.html
@@ -2,5 +2,5 @@
 <html lang="en">
 <head></head>
 <body>
-  <p>Everybody loves anime and hentai.</p>
+  <p>Everyone loves anime and hentai.</p>
 </body>
