--- a/A.html
+++ b/A.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head></head>
-<body>
-  <p>
+ <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>title</title>
+  </head>
+  <body>
 From fairest creatures we desire increase,
 That thereby beauty's rose might never die,
 But as the riper should by time decease,
@@ -17,5 +19,5 @@ Within thine own bud buriest thy content
 And, tender churl, makest waste in niggarding.
 Pity the world, or else this glutton be,
 To eat the world's due, by the grave and thee.
-  </p>
 </body>
+</html>
